--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Apod Search </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -17,13 +18,13 @@
   <div id="ideas">
     <div class="card">
       <div class="card-header">
-          Username
+          Apod Search
       </div>
       <div class="card-body">
-         <p class="card-text">content</p>
+         <p class="card-text">Get Picture</p>
       </div>
         <div class ="card-footer">
-        <small>Score</small>
+        <small>Favorites</small>
 
        </div>
       </div>
