--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Apod Search </title>
 </head>
 <body>
-    <h1>Apod Search</h1>
+    <h1>APOD Search</h1>
 
     <form>
       <label>Enter A Date</label>
