--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <form>
       <label>Enter A Date</label>
+      <img> </img>
       <input id="date" type="date"> 
       <button id="btn-get">Get Picture </button>
     </form>
